--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -45,7 +45,7 @@ header {
 
 .nav-links a:hover {
   color: black;/* Optional hover effect */
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -57,5 +57,8 @@ header {
   }
   .nav-links a {
     font-size: 18px;
+  }
+  .nav-links a:hover {
+    font-size: 1.5rem;
   }
 }
