--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,8 +3,8 @@
   justify-content: center;
   line-height: 10px;
   margin: 0;
-  color: #BDC3C7;
-  height: 1150px;
+  color: #D1D8D9;
+  height: 100vh;
 }
 .hero-content {
   padding-top: 300px;
