--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,3 +1,30 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in1 {
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+.fade-in2 {
+  animation: fadeIn 1s ease-in-out;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0
+}
+
+.fade-in3 {
+  animation: fadeIn 1s ease-in-out;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  opacity: 0
+}
+
 .hero {
   display: flex;
   justify-content: center;
