--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -11,20 +11,6 @@
   animation: fadeIn 1.5s ease-in-out;
 }
 
-.fade-in2 {
-  animation: fadeIn 1s ease-in-out;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
-  opacity: 0
-}
-
-.fade-in3 {
-  animation: fadeIn 1s ease-in-out;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-  opacity: 0
-}
-
 .hero {
   display: flex;
   justify-content: center;
@@ -32,25 +18,26 @@
   margin: 0;
   color: #D1D8D9;
   height: 100vh;
+  min-width: 1550px;
 }
 .hero-content {
   padding-top: 300px;
-  padding-left: 70px;
+  padding-left: 50px;
 }
 
 .headshot {
   padding-top: 200px;
-  padding-left: 75px;
-  height: 500px;
+  padding-left: 45px;
+  height: 600px;
   border-radius: 100%;
 }
 
 .title {
-  font-size: 6rem;
+  font-size: 8rem;
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .social-medias a {
@@ -58,9 +45,37 @@ h1 {
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .socials-desc {
   padding-top: 250px;
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    min-width: 1400px;
+  }
+  .title {
+    font-size: 6rem;
+  }
+  
+  h1 {
+    font-size: 2.5rem;
+  }
+  
+  .social-medias a {
+    padding-right: 50px;
+  }
+  
+  p {
+    font-size: 1.5rem;
+  }
+
+  .headshot {
+    padding-top: 200px;
+    padding-left: 75px;
+    height: 500px;
+    border-radius: 100%;
+  }  
 }
