--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,6 +11,7 @@ header {
   padding: 0 20px; /* Adds padding to left and right */
   height: 125px;
   font-family: Georgia;
+  z-index: 1000;
 }
 
 .headerName {
