Info for education and formatting

--- a/src/components/ResumePage.css
+++ b/src/components/ResumePage.css
@@ -20,13 +20,14 @@
 
 .fade-in3 {
   animation: fadeIn 1s ease-in-out;
-  animation-delay: 2s;
+  animation-delay: 1.7s;
   animation-fill-mode: forwards;
   opacity: 0;
 }
 .resume-container {
-  color: #BDC3C7;
-  height: 1000px;
+  color: #666;
+  height: 75vh;
+  max-height: 1250px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 80px;
@@ -47,23 +48,53 @@
   justify-content: center;
 }
 
+.header-pad {
+  padding-bottom: 15px;
+}
+
 .education-container .resume-info:first-of-type {
-  padding-top: 34px;
+  padding-top: 25px;
 }
 .resume-info {
-  padding-left: 50px;
-  padding-right: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: 2rem;
 }
-.resume-container .education-container,
-.resume-container .experience-container,
-.resume-container .technical-container {
+.education-container,
+.experience-container,
+.technical-container {
   background-color: #f8f8f8;
   border-radius: 40px;
   z-index: 0;
+  transition: transform 0.3s ease;
+}
+
+.education-container:hover,
+.experience-container:hover,
+.technical-container:hover  {
+  transform: translateY(-30px);
+}
+
+.major-minor {
+  padding-left: 15px;
 }
 
 .page {
   background-color: #34495E;
+}
+
+.education-honors-list {
+  padding-left: 15px;
+  list-style-type: none;
+  font-weight: bold;
+}
+
+.list-desc {
+  font-size: 25px;
+  font-weight: normal;
+  padding-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 1900px) {
