--- a/src/components/ResumePage.css
+++ b/src/components/ResumePage.css
@@ -67,6 +67,8 @@
   border-radius: 40px;
   z-index: 0;
   transition: transform 0.3s ease;
+  overflow-y: auto;
+
 }
 
 .education-container:hover,
@@ -84,6 +86,7 @@
 }
 
 .education-honors-list {
+  font-size: 25px;
   padding-left: 15px;
   list-style-type: none;
   font-weight: bold;
