--- a/src/components/ResumePage.css
+++ b/src/components/ResumePage.css
@@ -66,9 +66,9 @@
   background-color: #f8f8f8;
   border-radius: 40px;
   z-index: 0;
+  min-width: 500px;
   transition: transform 0.3s ease;
   overflow-y: auto;
-
 }
 
 .education-container:hover,
