--- a/src/components/ResumePage.css
+++ b/src/components/ResumePage.css
@@ -100,6 +100,19 @@
   margin-bottom: 15px;
 }
 
+.list-desc-list {
+  font-size: 25px;
+  font-weight: normal;
+  padding-left: 50px;
+  padding-top: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.list-desc-list li{
+  padding-bottom: 20px;
+}
+
 @media (max-width: 1900px) {
   .sub-header {
     font-size: 2.5rem;
