finished first draft of resume page

--- a/src/components/ResumePage.css
+++ b/src/components/ResumePage.css
@@ -113,6 +113,12 @@
   padding-bottom: 20px;
 }
 
+.tech-skills-flex {
+  display: flex;
+  gap: 50px;
+  font-size: 1.7rem;
+}
+
 @media (max-width: 1900px) {
   .sub-header {
     font-size: 2.5rem;
