--- a/src/components/ProjectsPage.css
+++ b/src/components/ProjectsPage.css
@@ -10,6 +10,7 @@
 }
 
 .projectTitle {
+  font-size: 35px;
   margin-top: 150px;
   margin-bottom: 20px;
 }
@@ -27,7 +28,6 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-
   margin-top: 20px;
 }
 
