--- a/src/components/ProjectsPage.css
+++ b/src/components/ProjectsPage.css
@@ -1,8 +1,22 @@
 .projects-container {
   text-align: center;
   padding-top: 200px;
-  color: white;
+  color: #D1D8D9;
   gap: 20px;
+}
+
+.projectCard {
+  margin: 0 auto;
+  max-width: 1000px;
+  border: 3px solid black;
+  padding: 20px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  transition: transform 0.3s ease;
+}
+
+.projectCard:hover {
+  transform: translateY(-30px);
 }
 
 .projectsTitle {
@@ -10,8 +24,7 @@
 }
 
 .projectTitle {
-  font-size: 35px;
-  margin-top: 150px;
+  font-size: 3rem;
   margin-bottom: 20px;
 }
 
@@ -24,6 +37,7 @@
 }
 
 .leftFlex, .rightFlex {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
