--- a/src/components/ProjectsPage.css
+++ b/src/components/ProjectsPage.css
@@ -1,17 +1,21 @@
 .projects-container {
   text-align: center;
+  margin: 0 auto;
   padding-top: 200px;
   color: #D1D8D9;
   gap: 20px;
 }
 
 .projectCard {
-  margin: 0 auto;
-  max-width: 1000px;
+  position: relative;
+  width: 1000px;
+  height: 600px;
   border: 3px solid black;
-  padding: 20px;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  
+  padding-left: 50px;
+  padding-right: 50px;
   transition: transform 0.3s ease;
 }
 
@@ -20,7 +24,7 @@
 }
 
 .projectsTitle {
-  font-size: 60px;
+  font-size: 5rem;
 }
 
 .projectTitle {
@@ -53,4 +57,20 @@
 
 .bottom {
   margin-bottom: 100px;
+}
+
+@media (max-width: 2500px) {
+  .projectCard {
+    margin: 0 auto;
+    margin-top: 100px;
+  }
+}
+
+@media (min-width: 2500px) {
+  .groupedFlex {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
 }
