--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,5 @@
 .App {
   background-color: #34495E;
   min-width: 1400px;
-  height: 100vh;
-  z-index: -1;
-  overflow-x: auto;
-  overflow-y: auto;
+  height: 100%;
 }
