--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -62,19 +62,18 @@ p {
   h1 {
     font-size: 2.5rem;
   }
+
+  .hero-desc {
+    font-size: 1.5rem;
+  }
   
   .social-medias a {
     padding-right: 50px;
-  }
-  
-  p {
-    font-size: 1.5rem;
   }
 
   .headshot {
     padding-top: 200px;
     padding-left: 75px;
     height: 500px;
-    border-radius: 100%;
   }  
 }
