--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -31,11 +31,11 @@
   height: 600px;
 }
 
-.title {
+.title-para {
   font-size: 8rem;
 }
 
-h1 {
+.h1-para {
   font-size: 3rem;
 }
 
@@ -43,7 +43,7 @@ h1 {
   padding-right: 50px;
 }
 
-p {
+.hero-para {
   font-size: 2rem;
 }
 
@@ -55,11 +55,11 @@ p {
   .hero {
     min-width: 1400px;
   }
-  .title {
+  .title-para {
     font-size: 6rem;
   }
   
-  h1 {
+  .h1-para {
     font-size: 2.5rem;
   }
 
