--- a/src/components/ProjectsPage.css
+++ b/src/components/ProjectsPage.css
@@ -8,8 +8,8 @@
 }
 
 .projectCard {
-  width: 1000px;
-  height: 600px;
+  width: 1200px;
+  height: 700px;
   border: 5px solid black;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -23,26 +23,26 @@
 
 .projectCard:hover {
   transform: translateY(-20px);
-  height: 1000px;
+  height: 1200px;
 }
 
 .projectsTitle {
-  font-size: 5rem;
+  font-size: 6rem;
 }
 
 .projectsSubtitle {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: normal;
 }
 
 .projectTitle {
-  font-size: 3rem;
+  font-size: 4rem;
   margin-bottom: 30px;
 }
 
 .projectLink {
-  font-size: 1.2rem;
-  color: #D1D8D9;;
+  font-size: 1.5rem;
+  color: #D1D8D9;
 }
 
 .projectLink:hover {
@@ -55,12 +55,12 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .projectImage {
-  height: 400px;
-  width: 600px;
+  height: 450px;
+  width: 700px;
 }
 
 .projectInfo {
@@ -69,9 +69,26 @@
   text-align: left;
 }
 
+.projectBullet {
+  font-size: 1.5rem;
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
+.infoHeader {
+  font-size: 2.5rem;
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+
 .bottom {
   margin-bottom: 100px;
 }
+
+.summary-title {
+  font-size: 2.5rem;
+}
+
 
 @media (max-width: 2500px) {
   .projectCard {
